@@ -2,6 +2,7 @@
 2007-xx-xx:
 	* version 0.6
 	* THIS VERSION ONLY WORKS WITH FIREFOX 3.0
+        * added new :mkvimperatorc command
 	* you can edit textfields with Ctrl-i now using an external editor (thanks to Joseph Xu)
 	* :open, :bmarks, etc. filter on space separated tokens now, so you can
 	  search with :open linux windows &lt;tab&gt; all your bookmarks/history
